--- a/UI/Web/src/app/person-detail/person-detail.component.html
+++ b/UI/Web/src/app/person-detail/person-detail.component.html
@@ -14,11 +14,19 @@
 
     <div class="main-container container-fluid pt-2 mb-5">
       <div class="row mb-0 mb-xl-3 info-container">
-        <div class="image-container col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
-          <app-image [styles]="{'background': 'none', 'max-height': '400px', 'height': '200px', 'width': '200px', 'border-radius': '50%'}"
-                     [imageUrl]="imageService.getPersonImage(person.id)"
-                     [errorImage]="imageService.noPersonImage"></app-image>
-        </div>
+        @if (HasCoverImage) {
+          <div class="image-container col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
+            <app-image [styles]="{'background': 'none', 'max-height': '400px', 'height': '200px', 'width': '200px', 'border-radius': '50%'}"
+                      [imageUrl]="imageService.getPersonImage(person.id)"
+                      [errorImage]="imageService.noPersonImage"></app-image>
+          </div>
+        } @else {
+          <div class="col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
+            <div style="background: var(--card-bg-color); max-height: 200px; height: 200px; width: 200px; border-radius: 50%" class="image-container d-flex align-items-center justify-content-center">
+              <i style="max-height: 128px; height: 128px; font-size: 8rem;" class="fas fa-user" aria-hidden="true"></i>
+            </div>
+          </div>
+        }
 
         <div class="col-xl-10 col-lg-7 col-md-12 col-xs-12 col-sm-12 mt-2">
           <div class="row g-0 mt-2">
