--- a/UI/Web/src/app/shared/person-badge/person-badge.component.scss
+++ b/UI/Web/src/app/shared/person-badge/person-badge.component.scss
@@ -1,18 +1,32 @@
 .tagbadge {
     background-color: var(--tagbadge-bg-color);
     transition: all .3s ease-out;
-    margin: 3px 5px 3px 0px;
-    padding: 2px 10px;
+    margin: 3px 10px 3px 0px;
     border-radius: 6px;
     font-size: .8rem;
     display: inline-block;
     cursor: pointer;
-    width: 120px;
+    width: 96px;
     word-break: break-word;
 
     i {
         font-size: 2.96rem;
         font-weight: bold;
         cursor: pointer;
+    }
+
+    image-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
