--- a/UI/Web/src/app/person-detail/person-detail.component.html
+++ b/UI/Web/src/app/person-detail/person-detail.component.html
@@ -16,14 +16,19 @@
       <div class="row mb-0 mb-xl-3 info-container">
         @if (HasCoverImage) {
           <div class="image-container col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
-            <app-image [styles]="{'background': 'none', 'max-height': '400px', 'height': '200px', 'width': '200px', 'border-radius': '50%'}"
+            <div class="person-badge">
+              <app-image
+                      objectFit="cover"
+                      height="200px"
+                      width="200px"
                       [imageUrl]="imageService.getPersonImage(person.id)"
                       [errorImage]="imageService.noPersonImage"></app-image>
+            </div>
           </div>
         } @else {
-          <div class="col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
-            <div style="background: var(--card-bg-color); max-height: 200px; height: 200px; width: 200px; border-radius: 50%" class="image-container d-flex align-items-center justify-content-center">
-              <i style="max-height: 128px; height: 128px; font-size: 8rem;" class="fas fa-user" aria-hidden="true"></i>
+          <div class="image-container col-5 col-sm-6 col-md-5 col-lg-5 col-xl-2 col-xxl-2 col-xxxl-2 d-none d-sm-block mt-2">
+            <div class="person-badge d-flex align-items-center justify-content-center">
+              <i class="fas fa-user" aria-hidden="true"></i>
             </div>
           </div>
         }
